# dbt-bigquery-end-to-end

./: .sqlfluff  .user.yml  README.md  dbt_project.yml  profiles.yml  pyproject.toml
macros/: cents_to_dollars.sql  dolar.sql
models/staging/: stg_customers.sql  stg_locations.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_supplies.sql
