[tool.poetry]
name = "dbt-bigquery-end-to-end"
version = "0.1.0"
description = "dbt utilizando para fazer a transformação e o bigquery para armazenamento"
authors = ["Wenderson <wenderson_fagundes@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
dbt-core = "^1.8.3"
dbt-bigquery = "^1.8.2"
sqlfluff-templater-dbt = "^3.0.7"
taskipy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
sqlfluff = "^3.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
fix = "sqlfluff fix snapshots && sqlfluff fix models"
